--- a/hello.html
+++ b/hello.html
@@ -3,7 +3,7 @@
     <script type="text/javascript">
       window.onload = function() {
           var welcome = document.getElementById('welcome');
-          welcome.innerHTML = 'Hello! ' + prompt('Input your name') + '!';
+          welcome.innerHTML = 'Hello! 123' + prompt('Input your name') + '!';
       };
     </script>
   </head>
