--- a/hello.html
+++ b/hello.html
@@ -1,14 +1,45 @@
 <html>
   <head>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       window.onload = function() {
           var welcome = document.getElementById('welcome');
           welcome.innerHTML = 'Hello! 123' + prompt('Input your name') + '!';
       };
-    </script>
+    </script> -->
   </head>
   <body>
     <span id="welcome"></span>
-    <p>123</p>
+    <ins><i>
+      <b>
+      <p style="color:darkblue;font-family:verdana;font-size: 200%;text-align:center;">4<sub>5</sub><sup>6</sup></p>
+    </b>
+    </i></ins>
+    
+    <small>
+      <del><strong>
+        <em>
+        <p style="color:darkblue;font-family:verdana;font-size: 200%;text-align:center;">4<mark style="background-color: red;">5</mark>6</p>
+      </em>
+      </strong></del>
+  </small>
+  <p>Here is a quote from WWF's website:</p>
+  <blockquote cite="http://www.worldwildlife.org/who/index.html">
+  For 50 years, WWF has been protecting the future of nature.
+  The world's leading conservation organization,
+  WWF works in 100 countries and is supported by
+  1.2 million members in the United States and
+  close to 5 million globally.
+  </blockquote>
+  <p>WWF's goal is to: <q>Build a future where people live in harmony with nature.</q></p>
+  <p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
+  <address>
+    Written by John Doe.<br>
+    Visit us at:<br>
+    Example.com<br>
+    Box 564, Disneyland<br>
+    USA
+    </address>
+    <p><cite>The Scream</cite> by Edvard Munch. Painted in 1893.</p>
+    <bdo dir="rtl">This text will be written from right to left</bdo>
   </body>
 </html>
